--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-bootstrap": "~1.1.1",
     "bootstrap": "~3.3.6",
     "bootstrap-sass": "~3.3.6",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "jasmine-core": "jasmine#~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
